--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "auth-from-scratch",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "14.5.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "babel-eslint": "^10.1.0",
     "bcrypt": "^5.0.0",
+    "bulma": "^0.9.1",
     "express": "^4.17.1",
-    "mongoose": "^5.10.3",
+    "mongoose": "^5.10.7",
+    "node-gyp": "^7.1.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "validator": "^13.1.1"
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
