--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "14.5.0"
+    "node": "14.5.0",
+    "node-gyp": "7.1.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,7 +15,7 @@
     "bulma": "^0.9.1",
     "express": "^4.17.1",
     "mongoose": "^5.10.7",
-    "node-gyp": "^7.1.0",
+    "node-forge": "^0.10.0",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
